reference/tests/snapshots/snapshot__run_reference_examples@transforms-4.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/transforms-4.prql
---
SELECT
  employees.*
FROM
  employees
ORDER BY
  age
