reference/tests/snapshots/snapshot__run_reference_examples@transforms-7.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/transforms-7.prql
---
SELECT
  employees.*
FROM
  employees
LIMIT
  10
