reference/tests/snapshots/snapshot__run_reference_prql@aggregate-0.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/transforms/aggregate-0.prql
---
SELECT
  AVG(salary),
  COUNT(*) AS ct
FROM
  employees
